--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "posh-alias"]
 	path = Modules/posh-alias
 	url = https://github.com/giggio/posh-alias
+
+[submodule "omp-themes"]
+	path = Modules/omp-themes
+	url = https://github.com/cassiofariasmachado/omp-themes
